# mysql-client-gui

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.linux-build  Makefile  README.md  go.mod  go.sum  pyproject.toml
cmd/mysql-client-gui/: main.go
internal/db/: config.go  query.go
internal/export/: csv.go
internal/tui/: tui.go
mysql_client_gui/: __main__.py  gui.py  mysql_cli.py
packaging/pyinstaller/: mysql-client-gui.spec
scripts/: build-linux-onedir.sh  run-linux-onedir.sh
