[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mysql-client-gui"
version = "0.1.0"
description = "A minimal Linux GUI wrapper around the MySQL CLI client for query and export."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "CareyWang" }]
dependencies = []

[project.scripts]
mysql-client-gui = "mysql_client_gui.__main__:main"
